--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -1,6 +1,23 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
-         version="4.0">
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
+         http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+         version="3.1">
+    <servlet>
+        <servlet-name>DoLoginServlet</servlet-name>
+        <servlet-class>org.library_management_system.servlet.DoLoginServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>DoLoginServlet</servlet-name>
+        <url-pattern>/DoLoginServlet</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>DoSignUpServlet</servlet-name>
+        <servlet-class>org.library_management_system.servlet.DoSignUpServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>DoSignUpServlet</servlet-name>
+        <url-pattern>/DoSignUpServlet</url-pattern>
+    </servlet-mapping>
 </web-app>
